# beamSP

./: .gitignore  README.MD  README.md  beam_demo.spec  beam_gui.spec  pyproject.toml  requirements-gui.txt  requirements.txt
.github/workflows/: release.yml
config/: data.xlsx  settings.py
core/: labels.py  reporting.py
core/data/: loader.py  synth.py
core/evaluation/: metrics.py  run_result.py  runner.py  validation.py
core/formula/: latexify.py  power_law.py
core/models/: base.py  linear.py  registry.py
docs/: report_00_environment.md  report_01_linear_regression.md  report_02_ridge_regression.md  report_03_lasso_regression.md  report_04_elasticnet_regression.md  report_05_genetic_algorithm.md  report_06_differential_evolution.md  report_07_pso.md  report_08_optimizers_comparison.md  report_09_gbr.md  report_10_svr.md  report_11_knn.md  report_12_gpr.md  report_13_symreg.md  report_14_bayes_symreg.md  report_15_pinn.md  report_16_mlp.md  report_17_rl_actor_critic.md  report_18_summary.md
docs/docx_docs/: report_01_linear_regression.docx  report_02_ridge_regression.docx  report_03_lasso_regression.docx  report_04_elasticnet_regression.docx  report_05_genetic_algorithm.docx  report_06_differential_evolution.docx  report_07_pso.docx  report_08_optimizers_comparison.docx  report_09_gbr.docx  report_10_svr.docx  report_11_knn.docx  report_12_gpr.docx  report_13_symreg.docx  (+6 more)
entrypoint/: _common.py  gui.py  interactive.py  line_regression.py
tools/: find_alpha.py  importances.py  tune_ga.py  tune_knn.py  tune_model.py  tune_optimizer.py  tune_svr.py
(+38 files in other folders)
