[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "beam-sp"
version = "0.3.0"
description = "Восстановление вклада двутавра Qдв методами ML и биоинспирированной оптимизации"
requires-python = ">=3.12"
dependencies = [
    "gplearn",
    "numpy",
    "pandas",
    "scikit-learn<1.6",
    "openpyxl",
    "matplotlib",
    "cma",
    "torch",
]

[tool.setuptools.packages.find]
include = ["config*", "core*", "entrypoint*"]
